--- a/index.html
+++ b/index.html
@@ -946,6 +946,8 @@ updateBackButtonVisibility();
   'Manheim Township',
   '#ff8800'
 );
+            }); // ✅ closes countyLayer onEachFeature click
+
 
 
     function loadTownship(townshipKey, geojsonPath, displayName, fillColor = '#ff8800') {
