--- a/index.html
+++ b/index.html
@@ -945,8 +945,11 @@ updateBackButtonVisibility();
   'Townships/Boundaries_Township_ManheimTownship_PA.geojson',
   'Manheim Township',
   '#ff8800'
-);
-            }); // ✅ closes countyLayer onEachFeature click
+); // ← end of loadTownship(...)
+}); // ✅ closes countyLayer.onEachFeature
+
+}); // ✅ THIS closes the entire fetch(...).then(data => {
+
 
 
 
