--- a/index.html
+++ b/index.html
@@ -1062,6 +1062,7 @@ worldMask.eachLayer(layer => {
       }
     }).addTo(map);
 // Define the updateBackButtonVisibility function at the top
+// Ensure updateBackButtonVisibility is declared at the top
 function updateBackButtonVisibility() {
   const backBtn = document.getElementById("backbutton");
   if (backBtn) { // Check if the button exists
@@ -1159,7 +1160,8 @@ function resetToWorldStatus() {
               layer.on('click', function () {
                 console.log('Road clicked:', feature.properties.name); // Debug log to ensure click event
                 if (insideLancaster && !layer._originalColor) {
-                  document.getElementById('guess-modal').style.display = 'block'; // Show modal
+                  // Show modal
+                  document.getElementById('guess-modal').style.display = 'block';
                 }
               });
             }
@@ -1181,13 +1183,8 @@ function resetToWorldStatus() {
         .catch(err => console.error('Error loading roads layer:', err));
     })
     .catch(err => console.error('Error loading county layer:', err));
-
-  // Add a global map click listener for debugging
-  map.on('click', function(e) {
-    console.log('Map clicked at: ', e.latlng);
-    console.log('Layer clicked: ', e.layer);
-  });
 }
+
 
 
 
