--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@
   let currentRoad = null;
   let currentLayerDepth = 0; // 1 = county, 2 = township, 3 = roads
   let activeRoadName = null;
+  let interactionCount = 0; // Initialize interactionCount properly
   let hoverOverlay = null;
   let worldMask;
   let roadsLayerGroup = L.layerGroup(); // Holds all road layers
